add android studio 2021.1.1.10 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,110 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Bumblebee (2021.1.1) Canary 10 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Canary 10</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.10/android-studio-2021.1.1.10-windows.exe">android-studio-2021.1.1.10-windows.exe</a>
+                                </td>
+                                <td>921632096 bytes</td>
+                                <td>1e10f9b7958b4d17479639adeff99ce0e108e7976c8d3514b82b091ffd538d82</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7g0ssfehj30o00c8mzl.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.10/android-studio-2021.1.1.10-windows.zip">android-studio-2021.1.1.10-windows.zip</a>
+                                </td>
+                                <td>934172838 bytes</td>
+                                <td>0e0c8837fa07ae2fd2fdb48b3aea143793f4fbd65ae7c5133537364793cbadbe</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.10/android-studio-2021.1.1.10-mac.zip">android-studio-2021.1.1.10-mac.zip</a>
+                                </td>
+                                <td>980130417 bytes</td>
+                                <td>1599008a854d50362a75e05375b589239aacde764648165578090d36d226e54e</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.10/android-studio-2021.1.1.10-mac_arm.zip">android-studio-2021.1.1.10-mac_arm.zip</a>
+                                </td>
+                                <td>976600085 bytes</td>
+                                <td>79738368a2e3ac2897ca74960464683674806ec8abcbf910281aaef1ca658014</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.10/android-studio-2021.1.1.10-linux.tar.gz">android-studio-2021.1.1.10-linux.tar.gz</a>
+                                </td>
+                                <td>953381827 bytes</td>
+                                <td>55c90b58689e6df32b002708813335ffda29977fd64a4eae452f61a0bd0457e3</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.10/android-studio-2021.1.1.10-cros.deb">android-studio-2021.1.1.10-cros.deb</a>
+                                </td>
+                                <td>801236452 bytes</td>
+                                <td>78b9eef295251bb4a3c1c01f9cdc20588fc546f2588839c1fddbd69c752ac38c</td>
+                            </tr>
+                            <!-- Bumblebee (2021.1.1) Canary 9 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Canary 9</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.9/android-studio-2021.1.1.9-windows.exe">android-studio-2021.1.1.9-windows.exe</a>
+                                </td>
+                                <td>925760544 bytes</td>
+                                <td>fbb2a1955beb0b579a4eec4fcd3a866b71c9068c51300e40aaefb8481c96c240</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7f9w9cmwj30o80c076r.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.9/android-studio-2021.1.1.9-windows.zip">android-studio-2021.1.1.9-windows.zip</a>
+                                </td>
+                                <td>938407683 bytes</td>
+                                <td>e1d501c73c8035fc1a67226ec5803f5597b4c9f0e511a90080e7d97094c0af24</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.9/android-studio-2021.1.1.9-mac.zip">android-studio-2021.1.1.9-mac.zip</a>
+                                </td>
+                                <td>978681427 bytes</td>
+                                <td>95ec0a8ed7f7f80eba776aad6f2228b019f2757b11e532560355610ca1199453</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.9/android-studio-2021.1.1.9-mac_arm.zip">android-studio-2021.1.1.9-mac_arm.zip</a>
+                                </td>
+                                <td>975354304 bytes</td>
+                                <td>83a47e82135659d6b03afe3baf96f18b391ee55e96e69263ad88e598a7e25850</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.9/android-studio-2021.1.1.9-linux.tar.gz">android-studio-2021.1.1.9-linux.tar.gz</a>
+                                </td>
+                                <td>954207330 bytes</td>
+                                <td>3628834453f74706629abea61d4faec41dd476d2e32a9c9f1ba02589377c9434</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.9/android-studio-2021.1.1.9-cros.deb">android-studio-2021.1.1.9-cros.deb</a>
+                                </td>
+                                <td>797795564 bytes</td>
+                                <td>28d244826fc5e07eac5fc7bd15bbca6927106d82dcb1f4e0d689c3d431a4c358</td>
+                            </tr>
                             <!-- Arctic Fox (2020.3.1) -->
                             <tr>
                                 <td rowspan="7">Arctic Fox (2020.3.1) Patch1</td>
@@ -326,7 +430,7 @@
                                 </td>
                                 <td>957222848 bytes</td>
                                 <td>2389fbf2c3aa5b6be48da7fea793ff495eaacd40bce95552c869c4f3a044dccc</td>
-                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gt4knreu6vj30oa0d3goe.jpg">查看</a></td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7f9hrqobj30nu0c3tb6.jpg">查看</a></td>
                             </tr>
                             <tr>
                                 <td>Windows (64-bit)</td>
@@ -378,7 +482,7 @@
                                 </td>
                                 <td>925728528 bytes</td>
                                 <td>60ff679a6e42585a626895a923b06d6ef143054a12b7aac5c8108fe38df28065</td>
-                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gt4koa9e7uj30ns0ce0v8.jpg">查看</a></td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7f92m8opj30nh0c6jtu.jpg">查看</a></td>
                             </tr>
                             <tr>
                                 <td>Windows (64-bit)</td>
@@ -430,7 +534,7 @@
                                 </td>
                                 <td>923983760 bytes</td>
                                 <td>85675c0d99cfe7593ed46405a53cd830571dd4e3f01adfbe64e239814af086be</td>
-                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gt4koa9e7uj30ns0ce0v8.jpg">查看</a></td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7fb4ojtyj30ou0c4wgw.jpg">查看</a></td>
                             </tr>
                             <tr>
                                 <td>Windows (64-bit)</td>
