add android studio 2021.1.1.11 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,117 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Bumblebee (2021.1.1) Canary 11 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Canary 11</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.11/android-studio-2021.1.1.11-windows.exe">android-studio-2021.1.1.11-windows.exe</a>
+                                </td>
+                                <td>918419336 bytes</td>
+                                <td>d51e8d80d9b7f0a3ceb8125d17b0faea3065f3732650358c57fc89dfc54f6ff9</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7gs0dbpzj30nq0c376s.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.11/android-studio-2021.1.1.11-windows.zip">android-studio-2021.1.1.11-windows.zip</a>
+                                </td>
+                                <td>930959909 bytes</td>
+                                <td>641e7e1257fe53acee9e4641f718b52bb91b4028f46e5d535cedd96d535f4747</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.11/android-studio-2021.1.1.11-mac.zip">android-studio-2021.1.1.11-mac.zip</a>
+                                </td>
+                                <td>976917116 bytes</td>
+                                <td>443572a34d2dbc903aa07bf88d8246733492fae86f55e38baecec8ab5457d092</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.11/android-studio-2021.1.1.11-mac_arm.zip">android-studio-2021.1.1.11-mac_arm.zip</a>
+                                </td>
+                                <td>973385448 bytes</td>
+                                <td>36cdcb07295b05b0be6485a443ce84bb64086beeb106e676a101b35a2d63112b</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.11/android-studio-2021.1.1.11-linux.tar.gz">android-studio-2021.1.1.11-linux.tar.gz</a>
+                                </td>
+                                <td>950169602 bytes</td>
+                                <td>746f26b913acc4f7d19f8bebdf3258bcd61a776e422fa1574a271591e759fb5a</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.11/android-studio-2021.1.1.11-cros.deb">android-studio-2021.1.1.11-cros.deb</a>
+                                </td>
+                                <td>801050912 bytes</td>
+                                <td>5802eb063379700549c78c44ca61c215f493beeb657a59850b8ace97a2e11da9</td>
+                            </tr>
+                            <!-- Arctic Fox (2020.3.1) Patch2-->
+                            <tr>
+                                <td rowspan="8">Arctic Fox (2020.3.1) Patch2</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.24/android-studio-2020.3.1.24-windows.exe">android-studio-2020.3.1.24-windows.exe</a>
+                                </td>
+                                <td>957232976 bytes</td>
+                                <td>4c6ec4029feea3672bfd17b359cc605fa96e74a0bb6a43da83b06fa662eb71e7</td>
+                                <td rowspan="8"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7gevnn4xj30nn0d2776.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.24/android-studio-2020.3.1.24-windows.zip">android-studio-2020.3.1.24-windows.zip</a>
+                                </td>
+                                <td>967558484 bytes</td>
+                                <td>efb15e41fb6aadf7b54d9e98ba430162c49873a3585408501d6898b9e110e903</td>
+                            </tr>
+                            </tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.24/android-studio-2020.3.1.24-mac.zip">android-studio-2020.3.1.24-mac.zip</a>
+                                </td>
+                                <td>997155822 bytes</td>
+                                <td>313132d570c71d1f67c5c3a004d7e50b2bbed3a593dc04b79c9a884b417c96a1</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Mac (ARM)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.24/android-studio-2020.3.1.24-mac_arm.dmg">android-studio-2020.3.1.24-mac_arm.dmg</a>
+                                </td>
+                                <td>993252252 bytes</td>
+                                <td>2ccc7605c6b154f7ad26db8d3e73721784cacdb4a765e1605e63344b6de656d6</td>
+                            </tr>
+                            <tr>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.24/android-studio-2020.3.1.24-mac_arm.zip">android-studio-2020.3.1.24-mac_arm.zip</a>
+                                </td>
+                                <td>994275463 bytes</td>
+                                <td>1895dbb4860b79eb9470cf2ef7fa477cb1cac6e6d058e8b13ac38292e19993ec</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.24/android-studio-2020.3.1.24-linux.tar.gz">android-studio-2020.3.1.24-linux.tar.gz</a>
+                                </td>
+                                <td>980631631 bytes</td>
+                                <td>f498ac0446b1fe32d9d5dda2b508049eb6732d9499619e2adf5ec9bb1166124d</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.24/android-studio-2020.3.1.24-cros.deb">android-studio-2020.3.1.24-cros.deb</a>
+                                </td>
+                                <td>852014128 bytes</td>
+                                <td>4f567a3955269d9ee69ac62fd5640bdb09acdae417b96c1571d46a27f5d407c5</td>
+                            </tr>
                             <!-- Bumblebee (2021.1.1) Canary 10 -->
                             <tr>
                                 <td rowspan="7">Bumblebee (2021.1.1) Canary 10</td>
