--- a/index.html
+++ b/index.html
@@ -315,6 +315,58 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Bumblebee (2021.1.1) Canary 12 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Canary 12</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.12/android-studio-2021.1.1.12-windows.exe">android-studio-2021.1.1.12-windows.exe</a>
+                                </td>
+                                <td>919540928 bytes</td>
+                                <td>709ba10dff35c05b7b98aef51670e2349deb0b970043545f2ad2124bb56dc19c</td>
+                                <td rowspan="7"><a href="">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.12/android-studio-2021.1.1.12-windows.zip">android-studio-2021.1.1.12-windows.zip</a>
+                                </td>
+                                <td>932082515 bytes</td>
+                                <td>f87867a7da31c74e56518232445bcae2290945352c8530e4019cf5f5958b2bb9</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.12/android-studio-2021.1.1.12-mac.zip">android-studio-2021.1.1.12-mac.zip</a>
+                                </td>
+                                <td>977955869 bytes</td>
+                                <td>a90766e45c2c3983cc41e888518d2d33f10a436e61ab439a421e38dda92ec17d</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.12/android-studio-2021.1.1.12-mac_arm.zip">android-studio-2021.1.1.12-mac_arm.zip</a>
+                                </td>
+                                <td>974426048 bytes</td>
+                                <td>bd1d1bdd724adc12252ccabafe9fea4697f0df7b44046e4bd9ce39f38790c13e</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.12/android-studio-2021.1.1.12-linux.tar.gz">android-studio-2021.1.1.12-linux.tar.gz</a>
+                                </td>
+                                <td>951302215 bytes</td>
+                                <td>2103396489fd6b39bc5d99a8f5dcbba8f86c7e640c2c2424efab035d0649d6b7</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.12/android-studio-2021.1.1.12-cros.deb">android-studio-2021.1.1.12-cros.deb</a>
+                                </td>
+                                <td>801951888 bytes</td>
+                                <td>420fe0e4e5c9eba0bb2153c6acd0bc8b58d0707243cdd885f06f0574dac537d7</td>
+                            </tr>
                             <!-- Bumblebee (2021.1.1) Canary 11 -->
                             <tr>
                                 <td rowspan="7">Bumblebee (2021.1.1) Canary 11</td>
