add android studio 2021.1.1 Beta1 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,176 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Bumblebee (2021.1.1) Beta 1 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Beta 1</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.14/android-studio-2021.1.1.14-windows.exe">android-studio-2021.1.1.14-windows.exe</a>
+                                </td>
+                                <td>921157800 bytes</td>
+                                <td>ad9cb6f1af3067a90c8c5c5dd7157c70af89bad1fa44d14ce3d8d61443603ca4</td>
+                                <td rowspan="7"><a href="">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.14/android-studio-2021.1.1.14-windows.zip">android-studio-2021.1.1.14-windows.zip</a>
+                                </td>
+                                <td>931835144 bytes</td>
+                                <td>42e760d32c8508282ea6f4968b6d646f25d4d3e7e2228d89506fec9af783fd93</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.14/android-studio-2021.1.1.14-mac.zip">android-studio-2021.1.1.14-mac.zip</a>
+                                </td>
+                                <td>977808597 bytes</td>
+                                <td>3da189125e0ed7b21cbe5778792540dcb0f41fb100a3c779c2bb41b76926459b</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.14/android-studio-2021.1.1.14-mac_arm.zip">android-studio-2021.1.1.14-mac_arm.zip</a>
+                                </td>
+                                <td>974267436 bytes</td>
+                                <td>d7d9ee8f7ae3d78d331903e8a3a0faec409c5866bd56aa214096609705561a19</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.14/android-studio-2021.1.1.14-linux.tar.gz">android-studio-2021.1.1.14-linux.tar.gz</a>
+                                </td>
+                                <td>951141702 bytes</td>
+                                <td>40fe6bd26d0ba4a82bf3872e1b9a2fc53f5963b29df9f485a56be0bf09ed2ec8</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.14/android-studio-2021.1.1.14-cros.deb">android-studio-2021.1.1.14-cros.deb</a>
+                                </td>
+                                <td>801782556 bytes</td>
+                                <td>e5b84604803cae357b342cb7904b7db4047c3d15137ae27506afc833229e64f0</td>
+                            </tr>
+                            <!-- Arctic Fox (2020.3.1) Patch 3-->
+                            <tr>
+                                <td rowspan="9">Arctic Fox (2020.3.1) Patch3</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.25/android-studio-2020.3.1.25-windows.exe">android-studio-2020.3.1.25-windows.exe</a>
+                                </td>
+                                <td>959102872 bytes</td>
+                                <td>decbe76f8b25a40c5ce8ea3a212dd23d3b3172e26d63e297291f8a555abed4e0</td>
+                                <td rowspan="9"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7jnyx6psj30od0e177h.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.25/android-studio-2020.3.1.25-windows.zip">android-studio-2020.3.1.25-windows.zip</a>
+                                </td>
+                                <td>967565248 bytes</td>
+                                <td>37ba6592e8f11efe96a4a48ae82847452ca7d42d4eba3e5690f63eeb896734d1</td>
+                            </tr>
+                            </tr>
+                                <td rowspan="2">Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.25/android-studio-2020.3.1.25-mac.dmg">android-studio-2020.3.1.25-mac.dmg</a>
+                                </td>
+                                <td>996278019 bytes</td>
+                                <td>caa2a4a6adbd5ff94e0fbb9ffec798d5b24319070d7d231684ea9a458b1420ee</td>
+                            </tr>
+                            </tr>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.25/android-studio-2020.3.1.25-mac.zip">android-studio-2020.3.1.25-mac.zip</a>
+                                </td>
+                                <td>997160676 bytes</td>
+                                <td>ddf0b192db46b023e2031bd00567aed64bb5251d955197d381bd355057596291</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Mac (ARM)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.25/android-studio-2020.3.1.25-mac_arm.dmg">android-studio-2020.3.1.25-mac_arm.dmg</a>
+                                </td>
+                                <td>993240624 bytes</td>
+                                <td>156935cdc02d0525d1b1529492468194027d1f63eac71d89ebd9c1fc08ba7c60</td>
+                            </tr>
+                            <tr>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.25/android-studio-2020.3.1.25-mac_arm.zip">android-studio-2020.3.1.25-mac_arm.zip</a>
+                                </td>
+                                <td>994273058 bytes</td>
+                                <td>05e190b6f33f4f924d69772fe149a9d697125a3be1f0b72d805b947fa4e102d4</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.25/android-studio-2020.3.1.25-linux.tar.gz">android-studio-2020.3.1.25-linux.tar.gz</a>
+                                </td>
+                                <td>980651083 bytes</td>
+                                <td>cfc96e4981ad17e27ba91681fada06553fb118960c95f49232f72f30c2e2f781</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.25/android-studio-2020.3.1.25-cros.deb">android-studio-2020.3.1.25-cros.deb</a>
+                                </td>
+                                <td>852023088 bytes</td>
+                                <td>0527502bda0322ff8d0617363370f8c5e40e947c0605eac5f605ff76897e9c3f</td>
+                            </tr>
+                            <!-- Bumblebee (2021.1.1) Canary 13 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Canary 13</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.13/android-studio-2021.1.1.13-windows.exe">android-studio-2021.1.1.13-windows.exe</a>
+                                </td>
+                                <td>919627440 bytes</td>
+                                <td>834398dd66a5351c0290bd00011e4106e4f5e3a4690427f0d0e47e2271e2107d</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7ilvzqnhj30op0c2wgz.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.13/android-studio-2021.1.1.13-windows.zip">android-studio-2021.1.1.13-windows.zip</a>
+                                </td>
+                                <td>932168269 bytes</td>
+                                <td>22b0613c1404d8ed949273f7d271e2bdd4e33e26f3172ae84adb07e8cbbdc67f</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.13/android-studio-2021.1.1.13-mac.zip">android-studio-2021.1.1.13-mac.zip</a>
+                                </td>
+                                <td>978037287 bytes</td>
+                                <td>3ace938b9c1d65ad213239ea72151b4e15fbd9a46f81c1defdca5e657607153c</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.13/android-studio-2021.1.1.13-mac_arm.zip">android-studio-2021.1.1.13-mac_arm.zip</a>
+                                </td>
+                                <td>974496899 bytes</td>
+                                <td>fb00a6d8e0b8ce0fd31efb0e0047d009f38d41f6dbab5cd265d09d97c70211a4</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.13/android-studio-2021.1.1.13-linux.tar.gz">android-studio-2021.1.1.13-linux.tar.gz</a>
+                                </td>
+                                <td>951364650 bytes</td>
+                                <td>f505e044b0a614980970e6fc5428fb639ad7e5443e261bfc23b34f970e978513</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.13/android-studio-2021.1.1.13-cros.deb">android-studio-2021.1.1.13-cros.deb</a>
+                                </td>
+                                <td>801953232 bytes</td>
+                                <td>0cc538b76c7f61edf950ef36774689e754e752ec796612c326f4aa85da728fc2</td>
+                            </tr>
                             <!-- Bumblebee (2021.1.1) Canary 12 -->
                             <tr>
                                 <td rowspan="7">Bumblebee (2021.1.1) Canary 12</td>
