add android studio 2021.2.1 Canary1 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,58 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Chipmunk (2021.2.1) Canary 1 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Canary 1</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.2.1.1/android-studio-2021.2.1.1-windows.exe">android-studio-2021.2.1.1-windows.exe</a>
+                                </td>
+                                <td>918519280 bytes</td>
+                                <td>a1712de0807772b11b9345c80cdbe5c614f0ba31480a98f4b37cc31b4f3a3bfc</td>
+                                <td rowspan="7"><a href="">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.1/android-studio-2021.2.1.1-windows.zip">android-studio-2021.2.1.1-windows.zip</a>
+                                </td>
+                                <td>929296323 bytes</td>
+                                <td>dbed94df35701ae74229d7090089b71b46d70b82ae64919552f14d19bfc16107</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.1/android-studio-2021.2.1.1-mac.zip">android-studio-2021.2.1.1-mac.zip</a>
+                                </td>
+                                <td>981529599 bytes</td>
+                                <td>35f92fb1cea003ab331bfad276a64f2f0a0df52912560b03bf42718da5a9fe32</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.1/android-studio-2021.2.1.1-mac_arm.zip">android-studio-2021.2.1.1-mac_arm.zip</a>
+                                </td>
+                                <td>977989229 bytes</td>
+                                <td>8a7fb0aa9c3e2b68ef1fa7f866d677f979703d40f80d6aa12962f445d54aa458</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.1/android-studio-2021.2.1.1-linux.tar.gz">android-studio-2021.2.1.1-linux.tar.gz</a>
+                                </td>
+                                <td>948996659 bytes</td>
+                                <td>7bd932d2f0276a6fd5970bca94633049bc85a533815705f97db0bde5cd96c0ba</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.2.1.1/android-studio-2021.2.1.1-cros.deb">android-studio-2021.2.1.1-cros.deb</a>
+                                </td>
+                                <td>790752632 bytes</td>
+                                <td>55c5df6601a2cb9483a611f195ee58b19c491e28d640605f26f1e9590d20ac76</td>
+                            </tr>
                             <!-- Bumblebee (2021.1.1) Beta 1 -->
                             <tr>
                                 <td rowspan="7">Bumblebee (2021.1.1) Beta 1</td>
