add android studio 2021.2.1 Canary2 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,58 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Chipmunk (2021.2.1) Canary 2 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Canary 2</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.2.1.2/android-studio-2021.2.1.2-windows.exe">android-studio-2021.2.1.2-windows.exe</a>
+                                </td>
+                                <td>922286176 bytes</td>
+                                <td>f5a8181fc46bc718d7e16769fdeceb7f82ce23ad98af5d1ae523036612593e57</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7kibmxo8j30ny0c6q5d.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.2/android-studio-2021.2.1.2-windows.zip">android-studio-2021.2.1.2-windows.zip</a>
+                                </td>
+                                <td>934170007 bytes</td>
+                                <td>decbf38c2b26b30cb13b2f9f25831cc64b2c7b31d8de11a046fcb6c952da9d31</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.2/android-studio-2021.2.1.2-mac.zip">android-studio-2021.2.1.2-mac.zip</a>
+                                </td>
+                                <td>984938725 bytes</td>
+                                <td>16e3bf8d84aee0022d1ca0f344fcc7eba01565dab16c535bdc68b9092a9df9db</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.2/android-studio-2021.2.1.2-mac_arm.zip">android-studio-2021.2.1.2-mac_arm.zip</a>
+                                </td>
+                                <td>981427550 bytes</td>
+                                <td>0e212f27abd2c12d563bc16838cb67208f9133957d1d9b27dcf71767bfc240e0</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.2/android-studio-2021.2.1.2-linux.tar.gz">android-studio-2021.2.1.2-linux.tar.gz</a>
+                                </td>
+                                <td>957337743 bytes</td>
+                                <td>df404a3e3777a2b0fb79b052ca2679bf2dd477dd2a42eb25a4893162df4f7677</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.2.1.2/android-studio-2021.2.1.2-cros.deb">android-studio-2021.2.1.2-cros.deb</a>
+                                </td>
+                                <td>805109360 bytes</td>
+                                <td>ac92b81c5683bff98925854c480ae6926f0c8e745043dfbb8731fc0a0795b0e1</td>
+                            </tr>
                             <!-- Chipmunk (2021.2.1) Canary 1 -->
                             <tr>
                                 <td rowspan="7">Bumblebee (2021.1.1) Canary 1</td>
