--- a/index.html
+++ b/index.html
@@ -315,6 +315,58 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Chipmunk (2021.2.1) Canary 3 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Canary 3</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.2.1.3/android-studio-2021.2.1.3-windows.exe">android-studio-2021.2.1.3-windows.exe</a>
+                                </td>
+                                <td>923123344 bytes</td>
+                                <td>415ca2bfa9cd12935d31cb938b5aca3d64e60e63400b0543263184b877c332b7</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7kxjl0byj30of0cctb9.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.3/android-studio-2021.2.1.3-windows.zip">android-studio-2021.2.1.3-windows.zip</a>
+                                </td>
+                                <td>935169628 bytes</td>
+                                <td>a21bd08f6fbb559f456dde2a6ae8aff68da36ab18f090835503b5fe60355ed5f</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.3/android-studio-2021.2.1.3-mac.zip">android-studio-2021.2.1.3-mac.zip</a>
+                                </td>
+                                <td>985939354 bytes</td>
+                                <td>85c9438a94fbc3689687b3dd65939d08acf0dbb88ddc9b6baaaca169cb985309</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.3/android-studio-2021.2.1.3-mac_arm.zip">android-studio-2021.2.1.3-mac_arm.zip</a>
+                                </td>
+                                <td>982426203 bytes</td>
+                                <td>28aed9ef5fc4e148dbc1e76320bd0c66252afb849deb3059dfce1d65676df141</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.3/android-studio-2021.2.1.3-linux.tar.gz">android-studio-2021.2.1.3-linux.tar.gz</a>
+                                </td>
+                                <td>958330860 bytes</td>
+                                <td>c4855d336f0d0da76f264943230ef5889ed9e463d527564327eb75cbe6edf1c1</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.2.1.3/android-studio-2021.2.1.3-cros.deb">android-studio-2021.2.1.3-cros.deb</a>
+                                </td>
+                                <td>805525332 bytes</td>
+                                <td>892948fec166333b27c408d811328b2fa564ac94dfd3b3aefe0f88e8bc9eae1b</td>
+                            </tr>
                             <!-- Chipmunk (2021.2.1) Canary 2 -->
                             <tr>
                                 <td rowspan="7">Bumblebee (2021.1.1) Canary 2</td>
